safari mobile flex gap to margin fix

--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,7 @@ N     N A     A    V        BBBBBB  A     A R     R
     list-style: none;
     display: flex;
     flex-direction: column;
-    gap: min(15vh, 3rem);
+    /* gap: min(15vh, 3rem); */
     height: 90vh;
     top: min(15vh, 5rem);
     right: 0;
@@ -187,7 +187,7 @@ N     N A     A    V        BBBBBB  A     A R     R
 .nav__list__item {
     opacity: 0;
     transition: opacity .1s ease-out ;
-
+    margin-bottom: min(15vh, 3rem);
 }
 .nav__list__item__link {
     color: var(--clr-text-light);
